--- a/css/utils.css
+++ b/css/utils.css
@@ -106,3 +106,18 @@
     margin-bottom: 10px;
     font-size: 24px;
 }
+
+.warning {
+    padding: 10px;
+    text-align: center;
+    background: #dc3545;    
+    color: #fff;
+}
+
+.hidden {
+    display: none;
+}
+
+.show {
+    display: block;
+}
