--- a/admin/style.css
+++ b/admin/style.css
@@ -177,6 +177,9 @@ table {
   align-items: center;
 }
 
+
+
+
 i {
   font-size: 40px;
 }
@@ -272,4 +275,55 @@ i {
     border-radius: 5px;
     height: 50px;
     padding: 5px;
+}
+
+@media (max-width: 500px) {
+  .flex{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  align-items: center;
+} 
+
+
+.top-header .container {
+  display: block;
+  justify-content: flex-start; 
+  height: 80px;
+}
+
+.jumbotron {
+  display: none;
+}
+
+.top-header .right-nav {
+  display: none;
+}
+
+.card {
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    padding: 10px;
+    width: 300px;
+     background-color: #272727 !important;
+    color: #fff;
+    text-align: center;
+}
+
+
+table {
+           width: 40px; 
+           margin-top: 100px;
+          /* border: 1px solid #343a40; */
+           border-collapse: collapse; 
+           font-size: 12px;
+        }
+
+         thead th {
+            color: #fff;
+              background: #343a40;
+            width: 10%;
+        }
+
 }
